--- a/lib/epp/commands/prepare_to_delete.xml.erb
+++ b/lib/epp/commands/prepare_to_delete.xml.erb
@@ -3,7 +3,7 @@
   <command>
     <update>
       <% @epp_objects.each do |object| %>
-        <%= object_node_for object, "activate" %>
+        <%= object_node_for object, "prepare_to_delete" %>
       <% end %>
     </update>
   </command>
